# Porters

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  install.ps1  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/ISSUE_TEMPLATES/: bug_report.yml  config.yml  documentation.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/: book.toml
docs/book/: 404.html  architecture.html  building.html  commands.html  commands.md#porters-add  commands.md#porters-build  commands.md#porters-create  commands.md#porters-execute  commands.md#porters-init  commands.md#porters-install  commands.md#porters-lock  commands.md#porters-publish  commands.md#porters-run  commands.md#porters-self-update  commands.md#porters-sync  configuration.html  configuration.md#porterstoml  contributing.html  dependencies.html  dependencies.md#adding-dependencies  dependencies.md#git-dependencies  dependencies.md#global-vs-local-dependencies  dependencies.md#lock-file  dependencies.md#syncing-dependencies  development.html  execute.html  execute.md#optional-configuration  execute.md#supported-file-extensions  extensions.html  extensions.md#creating-extensions  extensions.md#publishing-extensions  extensions.md#what-are-extensions  getting-started.html  getting-started.md#initializing-existing-project  installation.html  installation.md#installing-porters  introduction.html  print.html  publishing.html  publishing.md#github-releases  (+6 more)
docs/src/: SUMMARY.md  architecture.md  building.md  caching.md  commands.md  configuration.md  contributing.md  dependencies.md  development.md  execute.md  extensions.md  getting-started.md  installation.md  introduction.md  package-managers.md  publishing.md  registry.md  troubleshooting.md
registry/: README.md  schema.json
registry/compression/: zlib.json
registry/formatting/: fmt.json
registry/json/: nlohmann-json.json
registry/logging/: spdlog.json
registry/networking/: asio.json
registry/testing/: catch2.json
src/: artifact.rs  bin_cache.rs  build.rs  build_config.rs  buildsystem.rs  cache.rs  config.rs  cross_compile.rs  dependency.rs  error.rs  extension.rs  global.rs  global_config.rs  global_packages.rs  hash.rs  init.rs  license.rs  lockfile.rs  main.rs  project_metadata.rs  publish.rs  registry.rs  resolver.rs  scan.rs  update.rs  version.rs
src/export/: cmake.rs  conan.rs  mod.rs  vcpkg.rs  xmake.rs
src/pkg_managers/: conan.rs  mod.rs  vcpkg.rs  xmake.rs
src/util/: mod.rs  pretty.rs
