[package]
name = "porters"
version = "0.0.0"
edition = "2024"
authors = ["Muhammad Fiaz <contact@muhammadfiaz.com>"]
repository = "https://github.com/muhammad-fiaz/porters"
description = "A universal C/C++ project manager and build orchestrator"
license = "Apache-2.0"

[[bin]]
name = "porters"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
walkdir = "2.5"
colored = "2.1"
git2 = "0.19"
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.41", features = ["full"] }
dirs = "5.0"
regex = "1.11"
petgraph = "0.6"
sha2 = "0.10"
hex = "0.4"
dialoguer = "0.11"
reqwest = { version = "0.12", features = ["json", "blocking"] }
semver = "1.0"
tar = "0.4"
flate2 = "1.0"
zip = "0.6"
self_update = { version = "0.41", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
tokio-util = { version = "0.7", features = ["codec"] }


[dev-dependencies]
tempfile = "3.6"