[package]
name = "porters"
version = "0.0.1"
edition = "2024"
authors = ["Muhammad Fiaz <contact@muhammadfiaz.com>"]
repository = "https://github.com/muhammad-fiaz/porters"
description = "A universal C/C++ project manager and build orchestrator"
license = "Apache-2.0"

[[bin]]
name = "porters"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
walkdir = "2.5"
colored = "3.0"
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
dirs = "6.0"
regex = "1.12"
petgraph = "0.8"
sha2 = "0.10"
hex = "0.4"
dialoguer = "0.12"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
semver = "1.0"
tar = "0.4"
flate2 = "1.1"
zip = "6.0"
self_update = { version = "0.42", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.17"
tokio-util = { version = "0.7", features = ["codec"] }
which = "8.0"


[dev-dependencies]
tempfile = "3.23"
